--- a/src/app/product/product.html
+++ b/src/app/product/product.html
@@ -1,4 +1,4 @@
-<div class="bg-[#fbfafa] text-black p-4 mb-6">
+<!-- <div class="bg-[#fbfafa] text-black p-4 mb-6">
     <div class="flex items-center gap-3">
         <fa-icon [icon]="faBox" class="w-5 h-5"></fa-icon>
         <h1 class="text-xl font-bold">Productos</h1>
@@ -6,7 +6,7 @@
 </div>
 
 <div class="max-w-full mx-auto p-4 bg-gray-50">
-    <!-- Buscador y botón -->
+  
     <div class="flex flex-col lg:flex-row justify-between items-center gap-4 mb-6">
         <div class="w-full lg:w-1/3">
             <div class="relative">
@@ -22,7 +22,7 @@
         </button>
     </div>
 
-    <!-- Tabla -->
+
     <div class="bg-white rounded-2xl shadow-xl overflow-hidden">
         <div class="overflow-x-auto">
             <table class="min-w-full">
@@ -177,7 +177,7 @@
         </div>
     </div>
 
-    <!-- Paginación -->
+
     <div class="flex justify-between items-center mt-4 px-4">
         <div class="text-sm text-black-600">Mostrando {{ rangeStart() }} a {{ rangeEnd() }} de {{ total() }}</div>
         <div class="flex items-center gap-2">
@@ -198,9 +198,9 @@
             </button>
         </div>
     </div>
-</div>
+</div> -->
 
-<!-- Modal -->
+<!-- 
 @if (showModal()) {
 <div class="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center z-50 p-4">
     <div class="bg-white w-full max-w-2xl rounded-2xl shadow-2xl animate-fadeIn max-h-[90vh] overflow-y-auto">
@@ -292,4 +292,4 @@
         </form>
     </div>
 </div>
-}
+} -->
