--- a/src/app/forgot-password/forgot-password.html
+++ b/src/app/forgot-password/forgot-password.html
@@ -28,11 +28,10 @@
                 <input id="email" name="email" type="email" autocomplete="email" required formControlName="email"
                     class="mt-1 appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
                     placeholder="tu@email.com" />
-                @if (forgotPasswordForm.get('email')?.touched && forgotPasswordForm.get('email')?.errors?.['required'])
-                {
+                @if (email?.touched && email?.errors?.['required']) {
                 <p class="mt-1 text-sm text-red-600">El email es requerido</p>
                 }
-                @if (forgotPasswordForm.get('email')?.touched && forgotPasswordForm.get('email')?.errors?.['email']) {
+                @if (email?.touched && email?.errors?.['email']) {
                 <p class="mt-1 text-sm text-red-600">Formato de email inválido</p>
                 }
             </div>
