--- a/src/app/features/venta/components/venta-list/venta.html
+++ b/src/app/features/venta/components/venta-list/venta.html
@@ -101,8 +101,7 @@
                                 <span class="font-bold text-green-600">{{ v.total | number:'1.2-2' }} Bs.</span>
                             </td>
                             <td class="px-4 py-4">
-                                <span
-                                    class="inline-flex items-center px-2.5 py-1 rounded-full text-xs font-medium text-blue-800 bg-blue-100 capitalize">
+                                <span [class]="getMetodoPagoClass(v.metodo_pago)">
                                     {{ v.metodo_pago }}
                                 </span>
                             </td>
@@ -181,8 +180,7 @@
                             <i class="fas fa-credit-card text-xs mr-2"></i>
                             <span class="text-xs font-medium uppercase tracking-wide">Pago</span>
                         </div>
-                        <span
-                            class="inline-flex items-center px-2 py-1 rounded-md text-xs font-medium text-blue-800 bg-blue-100 capitalize">
+                        <span [class]="getMetodoPagoClass(v.metodo_pago)">
                             {{ v.metodo_pago }}
                         </span>
                     </div>
