--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -1,8 +1,11 @@
 <div class="flex h-screen bg-gray-100">
   <!-- Sidebar -->
-  <app-sidebar></app-sidebar>
+  <app-sidebar (sidebarToggled)="onSidebarToggle($event)"></app-sidebar>
 
-  <div class="flex-1 flex flex-col">
+  <!-- Main Content Area -->
+  <div class="flex-1 flex flex-col transition-all duration-300" [class.md:ml-72]="!sidebarCollapsed"
+    [class.md:ml-16]="sidebarCollapsed">
+
     <!-- Navbar -->
     <app-navbar></app-navbar>
 
