--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,14 +1,19 @@
-<div class="min-h-screen flex items-center justify-center bg-white p-4">
+<div class="min-h-screen flex items-center justify-center bg-gray-100 p-4">
   <div class="bg-white rounded-3xl shadow-xl p-10 w-full max-w-md mx-4 border border-gray-200">
     <!-- Header -->
     <div class="text-center mb-8">
-      <h2 class="text-3xl font-bold text-gray-800">Iniciar Sesión</h2>
-      <p class="mt-2 text-sm text-gray-500">
-        O
+           <div
+        class="w-24 h-24 rounded-full overflow-hidden flex items-center justify-center mx-auto mb-4 shadow-3xl"
+      >
+        <img src="assets/logo_venta.jpg" alt="Logo" class="w-full h-full object-cover" />
+      </div>
+      <h2 class="text-2xl font-bold text-gray-800">Iniciar Sesión</h2>
+      <p class="mt-2 text-sm text-gray-600">
+             ¿No tienes cuenta?
         <a
           [routerLink]="['/login/registrar']"
-          class="font-medium text-blue-600 hover:text-blue-500 underline"
-          >crea una cuenta nueva</a
+          class="font-medium text-blue-600 hover:text-blue-500 transition-colors underline"
+          > Regístrate aquí</a
         >
       </p>
     </div>
@@ -21,7 +26,7 @@
           >Usuario / Correo</label
         >
         <div class="relative">
-          <fa-icon [icon]="faUser" class="absolute left-3 top-3 text-gray-400"></fa-icon>
+          <fa-icon [icon]="faUser" class="absolute left-3 top-3 text-[#2196f3]"></fa-icon>
           <input
             id="identifier"
             type="text"
@@ -42,7 +47,7 @@
           >Contraseña</label
         >
         <div class="relative">
-          <fa-icon [icon]="faLock" class="absolute left-3 top-3 text-gray-400"></fa-icon>
+          <fa-icon [icon]="faLock" class="absolute left-3 top-3 text-[#2196f3]"></fa-icon>
 
           <input
             id="password"
@@ -56,7 +61,7 @@
             class="absolute inset-y-0 right-3 flex items-center text-gray-400"
             (click)="togglePasswordVisibility()"
           >
-            <fa-icon [icon]="showPassword ? faEyeSlash : faEye"></fa-icon>
+            <fa-icon [icon]="showPassword ? faEyeSlash : faEye" class="text-[#2196f3]"></fa-icon>
           </button>
         </div>
         @if (loginForm.get('password')?.touched && loginForm.get('password')?.errors?.['required'])
@@ -85,7 +90,7 @@
       <!-- Submit -->
       <button
         type="submit"
-        class="w-full py-3 rounded-xl bg-blue-600 hover:bg-blue-700 text-white font-semibold shadow-md transition transform hover:-translate-y-0.5"
+        class="w-full py-3 rounded-xl bg-[#2196f3] hover:bg-blue-500 text-white font-semibold shadow-md transition transform hover:-translate-y-0.5"
       >
         Iniciar Sesión
       </button>
